--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-var request = $request;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <code>
+        var request = $request;
 
 const options = {
     url: "https://api.revenuecat.com/v1/product_entitlement_mapping",
@@ -67,3 +76,6 @@ body = JSON.stringify(jsonToUpdate);
 $done({body});
 
 });
+    </code>
+</body>
+</html>
